2004-10-03  Atsushi Enomoto  <atsushi@ximian.com>

	* DataSet.cs : Attribute constraint field XPath must be written as
	  @blah. This fixes bug #66366.

2004-09-28 Umadevi S <sumadevi@novell.com>
	* DataRow.cs - checked for Enforceconstraints, while using indices to search for related rows

2004-09-24  Sureshkumar T  <tsureshkumar@novell.com>

	* DataSet.cs : Don't check constraints for dataset clear
	* DataRowCollection.cs : check for EnforceConstraints flag 
	before checking foriegn key constraints in Clear method
	* DataTable.cs : Redundant checking removed in Clear method as it is
	checked in DataRowCollection.Clear method. 


2004-09-19  Sureshkumar T <tsureshkumar@novell.com>
	* DataRow.cs : while deserialization of dataset, adding a current row precedes the original row.
		       hence, adding a row cache is necessary if the original row happens to be current.
		       fixed bug #63097

2004-08-23  Martin Baulig  <martin@ximian.com>

	* XmlDataInferenceLoader.cs (Driver): Make this class internal,
	not public.

2004-08-18 Umadevi S <sumadevi@novell.com>
	* DataView.cs - Completed most of the event handling. 
	Thanks to Punit Todi <punit_todi@da-iict.org> for implementing most of it.
	Thanks to Boris Kirzner <borisk@mainsoft.com> for commenting and suggesting changes to the implementation.
	* DataTable.cs - Changed Access modifiers of class/methods since it was used by DataView.

2004-08-06  Atsushi Enomoto  <atsushi@ximian.com>

	* DataSet.cs : DataSet's ExtendedProperties were not XmlConverted.

2004-08-05  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlConstants.cs : Added constants for "msprop" support.
	* DataSet.cs : ExtendedProperties should be written in the schema.
	  This fixes bug #61233.

2004-07-27  Atsushi Enomoto  <atsushi@ximian.com>

	* DataSet.cs : on serialization to XmlWriter, XmlConvert should be
	  used. There were also some culture dependency problems to write int.

2004-06-27  Atsushi Enomoto  <atsushi@ximian.com>
